samples/_failures_safe/1761128944_5c4340_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c64a3c48.c:188:1: error: expected identifier or ‘(’ at end of input
  188 | void
      | ^~~~
